# someip-app

./: .gitignore  someip.puml
client/: CMakeLists.txt  client.cpp
eventService/: build.sh
eventService/client/: CMakeLists.txt
eventService/client/src/: client.cpp
eventService/server/: CMakeLists.txt
eventService/server/src/: server.cpp
server/: CMakeLists.txt  helloworld-local.json  server.cpp
